<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_this">このアプリについて</string>
    <string name="account">アカウント作成</string>
    <string name="account_here">アカウント作成はこちら</string>
    <string name="account_message" />
    <string name="activity_chart_body_message">適正体重より%1$s%2$.1fkg</string>
    <string name="activity_chart_title_bicycle">電車距離推移</string>
    <string name="activity_chart_title_point">活動ポイント推移</string>
    <string name="activity_chart_title_step">歩数推移</string>
    <string name="activity_chart_title_weight">体重推移</string>
    <string name="activity_chart_title_x">x</string>
    <string name="activity_chart_unit_bicycle">@string/km</string>
    <string name="activity_chart_unit_point">Pt</string>
    <string name="activity_chart_unit_step">歩/万</string>
    <string name="activity_chart_unit_weight">@string/kg</string>
    <string name="activity_chart_unit_x" />
    <string name="add">追加する</string>
    <string name="admin_name">運営</string>
    <string name="already_get">獲得済</string>
    <string name="app_message">さんてつアプリは健康づくりを応援するアプリです。\10アプリケーションが自動的に歩行や自転車を判別して運動を計測します。ポイント獲得やアプリを通じた交流を励みに、楽しく健康を目指しましょう！</string>
    <string name="app_name">さんてつアプリ</string>
    <string name="app_title">さんてつアプリ</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="approval_message">利用規約とプライバシーポリシーを確認の上、「次へ」をタップしてください。</string>
    <string name="approval_to_various_conventions">各種規約への承認</string>
    <string name="auth">承認</string>
    <string name="bike">自転車</string>
    <string name="bike_distance">自転車距離</string>
    <string name="birthday">誕生日</string>
    <string name="bmi_range">BMI適正範囲</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="button_point">ポイントをこの商品と交換する</string>
    <string name="cancel">キャンセル</string>
    <string name="challenge_count">クリアしたチャレンジ</string>
    <string name="change_password">パスワード変更</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chart_error_get_user">ユーザー情報の取得に失敗しました。しばらくしてからお試しください。</string>
    <string name="close">閉じる</string>
    <string name="club_add_user_id_hint">abcd1234</string>
    <string name="club_add_user_id_title">ユーザーID</string>
    <string name="club_add_user_title">グループにユーザーを追加</string>
    <string name="club_button_add_member">ユーザーを追加</string>
    <string name="club_button_auth_user">承認する</string>
    <string name="club_button_change_icon">アイコンを変更</string>
    <string name="club_button_create">グループを作成</string>
    <string name="club_button_create_new">グループを新規作成</string>
    <string name="club_button_delete_club">グループを削除</string>
    <string name="club_button_edit">情報を編集</string>
    <string name="club_button_entry">グループに参加</string>
    <string name="club_button_member">メンバー</string>
    <string name="club_button_ranking">ランキング</string>
    <string name="club_button_refuse_club">グループから退出</string>
    <string name="club_button_setting">全般</string>
    <string name="club_button_share_code">コードを共有</string>
    <string name="club_button_update">グループ情報を更新</string>
    <string name="club_confirm_auth">このユーザーのグループへの参加を承認しますか？</string>
    <string name="club_confirm_delete_club">グループを削除しますか？</string>
    <string name="club_confirm_refuse_user">このユーザーをグループから退出させますか？</string>
    <string name="club_confirm_self_refuse">グループから退出しますか？</string>
    <string name="club_create_detail_title">グループの説明(100文字)</string>
    <string name="club_create_name_hint">〇〇町パパママ会</string>
    <string name="club_create_name_title">グループの名前(30文字)</string>
    <string name="club_create_reset_title">ランキングをリセットする期間</string>
    <string name="club_endtime_default">未設定</string>
    <string name="club_endtime_default_date">2030年1月1日</string>
    <string name="club_endtime_title">終了日時</string>
    <string name="club_entry_code_separator">-</string>
    <string name="club_entry_code_title">グループコードを入力</string>
    <string name="club_entry_message">グループ参加申請を完了しました。承認していただくようメンバーにお伝えください。</string>
    <string name="club_entry_title">申請完了</string>
    <string name="club_error_auth_user">ユーザーの認証に失敗しました。しばらくしてからお試しください。</string>
    <string name="club_error_create">%1$sの作成に失敗しました。しばらくしてからお試しください。</string>
    <string name="club_error_create_name">グループの名前を入力してください</string>
    <string name="club_error_delete">グループの削除に失敗しました。しばらくしてからお試しください。</string>
    <string name="club_error_entry">ユーザーの追加に失敗しました。ユーザーIDを再度お確かめください。</string>
    <string name="club_error_entry_user_already_exist">すでにグループに追加されています。</string>
    <string name="club_error_exist_user">ユーザー情報の取得に失敗しました。ユーザーIDを再度お確かめください。</string>
    <string name="club_error_format_hash_id">ユーザーIDは8文字の英数字を入力してください。</string>
    <string name="club_error_get">グループ情報の取得に失敗しました。グループコードを再度確認してください。</string>
    <string name="club_error_refuse_user">グループ退出に失敗しました。しばらくしてからお試しください。</string>
    <string name="club_error_user_info">不正なユーザー情報です</string>
    <string name="club_exception_entry">ユーザーの追加に失敗しました。しばらくしてからお試しください。</string>
    <string name="club_exception_exist_user">ユーザー情報の取得に失敗しました。しばらくしてからお試しください。</string>
    <string name="club_exception_get">グループ情報の取得に失敗しました。しばらくしてからお試しください。</string>
    <string name="club_list_title">グループ</string>
    <string name="club_reset_month">1ヶ月毎</string>
    <string name="club_reset_no">リセットしない</string>
    <string name="club_reset_season">3ヶ月毎</string>
    <string name="club_reset_week">1週間毎</string>
    <string name="club_reset_year">1年毎</string>
    <string name="club_setting_code_title">グループコード</string>
    <string name="club_setting_detail_title">説明</string>
    <string name="club_setting_start_title">作成日</string>
    <string name="club_share_code_text">%1$sのグループコード：%2$s</string>
    <string name="cm">cm</string>
    <string name="color_picker_default_title">色を選択</string>
    <string name="com.crashlytics.android.build_id">8e5d782a2d0148808d7b5cb4a0689380</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="confirm">確認</string>
    <string name="confirm_location">位置情報許可済</string>
    <string name="confirm_location_yet">位置情報未許可</string>
    <string name="confirm_policy">プライバシーポリシー\10確認済</string>
    <string name="confirm_policy_yet">プライバシーポリシー\10未確認</string>
    <string name="confirm_terms">利用規約確認済</string>
    <string name="confirm_terms_yet">利用規約未確認</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="current_bmi">現在のBMI</string>
    <string name="days">連続記録日数</string>
    <string name="default_web_client_id">230638487233-g1aj5djkho147d2s832stbnhpmlrpgoq.apps.googleusercontent.com</string>
    <string name="default_zero">0</string>
    <string name="delete">削除</string>
    <string name="diagnosis_date">受診日</string>
    <string name="diagnosis_detail">内容</string>
    <string name="diagnosis_field">診療所名など</string>
    <string name="distance">@string/km</string>
    <string name="dot">.</string>
    <string name="download_30">最新の30日分同期する</string>
    <string name="location">位置情報の取得</string>
    <string name="location_message">このアプリは端末が取得する位置情報を利用して行動情報を取得しています。下にあるボタンをタップし、OSの案内を許可してください。</string>
    <string name="login_here">ログインはこちら</string>
    <string name="login_message">アプリの利用にはアカウントの作成が必要です。</string>
    <string name="mail">email</string>
    <string name="mets">METs-h</string>
    <string name="next">次へ</string>
    <string name="password">パスワード（英数字8文字以上）</string>
    <string name="password_forget">パスワードを忘れた方はこちら</string>
    <string name="password_re">パスワード（再入力）</string>
    <string name="permission_of_privacy">プライバシー情報の許諾</string>
    <string name="point">ポイント</string>
    <string name="policy">プライバシーポリシー</string>
    <string name="remove_all_data_here">データの初期化はこちら</string>
    <string name="sanriku_spot_order">並び順</string>
    <string name="sanriku_spot_order_latest">新着順</string>
    <string name="sanriku_spot_order_nearest">近い順</string>
    <string name="step">歩</string>
    <string name="step_count">歩数</string>
    <string name="support_login">ログインでお困りの方はこちら\10(メールアプリが開きます)</string>
    <string name="terms">利用規約</string>
    <string name="train_distance">距離</string>
</resources>