<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:id="@+id/viewLogin" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:background="@color/def_white" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginStart="26dp" android:layout_marginEnd="26dp">
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="13dp" android:layout_marginBottom="13dp">
            <TextView android:gravity="center" android:id="@+id/loginMessage" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/login_message" android:layout_marginStart="13dp" android:layout_marginEnd="13dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/login_mail_layout" android:background="@drawable/button_select" android:layout_width="match_parent" android:layout_height="50dp" android:layout_marginBottom="13dp">
            <ImageView android:layout_width="40dp" android:layout_height="40dp" android:src="@mipmap/mail" android:scaleType="centerCrop" android:contentDescription="@string/default_zero" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintTop_toTopOf="0" app:srcCompat="@mipmap/mail"/>
            <EditText android:textStyle="bold" android:id="@+id/loginEmail" android:layout_width="match_parent" android:layout_height="50dp" android:hint="@string/mail" android:ems="10" android:inputType="textEmailAddress" android:layout_marginStart="53dp" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintTop_toTopOf="0"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/login_pass_layout" android:background="@drawable/button_select" android:layout_width="match_parent" android:layout_height="50dp" android:layout_marginBottom="13dp">
            <ImageView android:layout_gravity="center_horizontal" android:layout_width="40dp" android:layout_height="40dp" android:src="@mipmap/pass" android:scaleType="centerCrop" android:contentDescription="@string/default_zero" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintTop_toTopOf="0" app:srcCompat="@mipmap/pass"/>
            <EditText android:textStyle="bold" android:id="@+id/loginPassword" android:layout_width="match_parent" android:layout_height="50dp" android:hint="@string/password" android:ems="10" android:inputType="textPassword" android:layout_marginStart="53dp" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintTop_toTopOf="0"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/login_pass_layout2" android:background="@drawable/button_select" android:layout_width="match_parent" android:layout_height="50dp" android:layout_marginBottom="13dp">
            <ImageView android:layout_width="40dp" android:layout_height="40dp" android:src="@mipmap/pass" android:scaleType="centerCrop" android:contentDescription="@string/default_zero" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintTop_toTopOf="0" app:srcCompat="@mipmap/pass"/>
            <EditText android:textStyle="bold" android:id="@+id/loginPassword2" android:layout_width="match_parent" android:layout_height="50dp" android:hint="@string/password_re" android:ems="10" android:inputType="textPassword" android:layout_marginStart="53dp" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintTop_toTopOf="0"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <Button android:textColor="@drawable/text_style" android:id="@+id/buttonLogin" android:background="@drawable/button_main" android:layout_width="match_parent" android:layout_height="40dp" android:text="@string/account"/>
        <TextView android:textStyle="bold" android:textColor="@color/red" android:gravity="center" android:id="@+id/accountMessage" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="26dp" android:layout_marginBottom="13dp" android:text="@string/account_message"/>
        <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/changeMessageLayout" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="26dp" android:layout_marginBottom="13dp">
            <Button android:textColor="@drawable/text_style" android:id="@+id/changeMessage" android:background="@drawable/button_main" android:padding="6.5dp" android:layout_width="match_parent" android:layout_height="40dp" android:text="@string/login_here" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <RelativeLayout android:id="@+id/layoutForgetPassword" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="26dp">
            <TextView android:textColor="@color/red" android:id="@+id/textForgetPassword" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/password_forget" android:layout_alignParentEnd="true"/>
        </RelativeLayout>
        <RelativeLayout android:id="@+id/layoutSupportLogin" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="26dp">
            <TextView android:textColor="@color/red" android:gravity="right" android:id="@+id/textSupportLogin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/support_login" android:layout_alignParentEnd="true"/>
        </RelativeLayout>
        <RelativeLayout android:id="@+id/layoutRemoveAllData" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="26dp">
            <TextView android:textColor="@color/red" android:gravity="right" android:id="@+id/textRemoveAllData" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/remove_all_data_here" android:layout_alignParentEnd="true"/>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
